service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-20211215
spec:
  selector:
    app: demo-app-20211215
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
